--- a/bootstrap.html
+++ b/bootstrap.html
@@ -87,3 +87,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
+
+
+
+<MaltegoMessage>
+<MaltegoTransformRequestMessage>
+<Entities>
+<Entity Type="DNSName">
+<Genealogy>
+<Type Name="maltego.DNSName" OldName="DNSName"/>
+</Genealogy>
+<AdditionalFlelds>
+<Field Name="fqdn" DisplayName="DNSName">
+Ipine.paterva.com</Field>
+</AdditionalFields>
+<Value>alpine paterva.com</Value>
+<Weight>0</Weight>
